exports[`(.not).toHaveServiceUnavailableStatus > using axios > .not.toHaveServiceUnavailableStatus > fails when response have status code 503 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveServiceUnavailableStatus()</intensity>

Expected status code to not be 503 received:
  <red>503</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 503,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveServiceUnavailableStatus > using axios > .toHaveServiceUnavailableStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveServiceUnavailableStatus()</intensity>

Expected status code to be 503 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;
